<resources>
    <string name="app_name">かんたんポケット家計簿</string>
    <string name="homeHeadMassage">出費を入力してください</string>
    <string name="registerBtn">登録</string>
    <string name="clearBtn">クリア</string>
    <string name="viewBtn">一覧表示</string>
    <string name="settingBtn">設定</string>
    <string name="editAreaHint">金額を入力</string>
    <string name="monthExpense">今月の支出合計は</string>
    <string name="remainBudget">今月の残り予算は</string>
    <string name="displayYendesu">円です</string>
    <string name="detailLabelDate">支出日 :</string>
    <string name="detailLabelAmount">支出額 :</string>
    <string name="detailLabelItem">支出項目 :</string>
    <string name="detailLabelMemo">メモ :</string>
    <string name="editBtn">保存</string>
    <string name="deleteBtn">削除</string>
    <string name="backBtn">戻る</string>
    <string name="addItem">追加項目を入力してください</string>
    <string name="failSave">保存に失敗しました</string>
    <string name="successSave">保存しました</string>
    <string name="selectItemMessage">支出項目を選択してください</string>
    <string name="detailItemEditTitle">支出項目を編集</string>
    <string name="deleteConfirmMessage">この項目を削除してもよろしいですか？</string>
    <string name="cancelDelete">削除を中止しました</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="budgeSettingTitle">月次予算設定</string>
    <string name="budgeSettingMessage">月次の予算を入力</string>
</resources>
