<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_budget_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.outbackexmo.mybudgetmanager.BudgetSetting">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budgeSettingTitle"
        android:textSize="24sp"
        android:layout_marginBottom="36dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/budgeSettingMessage"
        android:maxLines="1"
        android:id="@+id/budgetSetting"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <Button
                android:onClick="saveBudget"
                android:text="@string/editBtn"/>
            <Button
                android:onClick="backBtn"
                android:text="@string/backBtn"/>
        </TableRow>
    </TableLayout>

</LinearLayout>
