<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.outbackexmo.mybudgetmanager.HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/homeHeadMassage"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/dateBtn"
            android:lines="1"
            android:ellipsize="end"
            android:onClick="dateInput"
            android:textSize="12sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:inputType="numberSigned"
            android:maxLength="8"
            android:hint="@string/editAreaHint"
            android:textAlignment="center"
            android:id="@+id/editArea"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/itemBtn"
            android:ellipsize="end"
            android:lines="1"
            android:onClick="itemInput"
            android:textSize="12sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="registerBtn"
            android:text="@string/registerBtn"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clearBtn"
            android:text="@string/clearBtn"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="viewBtn"
            android:text="@string/viewBtn"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="settingBtn"
            android:text="@string/settingBtn"/>
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:stretchColumns="0,1,2">
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:text="@string/monthExpense"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                />
            <TextView
                android:textAlignment="center"
                android:textSize="24sp"
                android:id="@+id/totalAmount"/>
            <TextView
                android:text="@string/displayYendesu"
                android:textAlignment="textStart"
                android:textSize="16sp"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:text="@string/remainBudget"
                android:textAlignment="textEnd"
                android:textSize="16sp"/>
            <TextView
                android:textAlignment="center"
                android:textSize="24sp"
                android:id="@+id/remainAmount"/>
            <TextView
                android:text="@string/displayYendesu"
                android:textAlignment="textStart"
                android:textSize="16sp"/>
        </TableRow>


    </TableLayout>
</LinearLayout>
